--- a/gis_project/public/manifest.json
+++ b/gis_project/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Final Project",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "small_logo.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
