--- a/gis_project/package.json
+++ b/gis_project/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-draw": "^0.20.4",
+    "react-loading-indicators": "^1.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
